# slot_booking_app

./: .gitignore
backend/: .env  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6a1c73adecef_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  dependencies.py  events.py  ownership.py  permissions.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  base.py  booking.py  department.py  game.py  slot.py  user.py
backend/app/schemas/: auth.py  booking.py  department.py  game.py  slot.py  user.py
backend/app/services/: auth_service.py  booking_service.py  department_service.py  game_service.py  slot_service.py  user_service.py
backend/tests/: ENDPOINTS_SUMMARY.md  conftest.py  debug_test.py  test_app.py
backend/tests/routers/auth/: __init__.py  test_login.py  test_register.py
backend/tests/routers/bookings/: __init__.py  test_booking_operations.py  test_create_booking.py  test_get_booking.py  test_get_bookings.py  test_simple_booking.py
backend/tests/routers/departments/: __init__.py  test_create_department.py  test_delete_department.py  test_get_department.py  test_get_departments.py  test_update_department.py
backend/tests/routers/games/: __init__.py  test_create_game.py  test_delete_game.py  test_get_game.py  test_get_games.py  test_update_game.py
backend/tests/routers/slots/: __init__.py  test_create_slot.py  test_delete_slot.py  test_get_slot.py  test_get_slots.py  (+1 more)
(+32 files in other folders)
